src/main/java/com/esempla/test/demo/errors/ErrorConstants.java
package com.esempla.test.demo.errors;

import java.net.URI;

public final class ErrorConstants {

    public static final URI USERNAME_ALREADY_USED_TYPE = URI.create("/");

    public ErrorConstants() {
    }
}
